--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
     color: #97c93e !important;
 }
 
+.btn-platzi {
+    background-color: #97c93e;
+    color: white;
+}
+
+.btn-platzi:hover {
+    background-color: #82ad36;
+}
+
 #header img {
     width: 80px;
 }
@@ -14,6 +23,15 @@
 
 #carousel {
     position: relative;
+}
+
+#place-time {
+    background-color: rgba(33, 37, 41, 1);
+    color: white;
+}
+
+#place-time img {
+    max-width: 100%;
 }
 
 #carousel .overlay {
